[project]
name = "leetcode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ko-nifuramu", email = "kotaro22235963@gmail.com" }
]
dependencies = [
    "typing>=3.7.4.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/leetcode"]
